<resources>
    <string name="app_name">Picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="label_filter">Filter</string>
    <string name="label_histogram">Histogram</string>
    <string name="label_adjust">Adjust</string>
    <string name="label_AI">AI</string>
    <string name="label_more">Additional</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_contrast">Contrast</string>
    <string name="label_saturation">Saturation</string>
    <string name="label_color_matrix">Color matrix</string>
    <string name="label_hsv">HSV</string>
    <string name="red">Red</string>
    <string name="label_quote">Quote</string>
    <string name="label_sign">Sign</string>
    <string name="studio">Studio</string>
    <string name="discover">Discover</string>
    <string name="community">Community</string>
    <string name="account">Account</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="scale">Scale</string>
    <string name="label_x">X</string>
    <string name="label_y">Y</string>
    <string name="default_value_0">0</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="label_blur">Blur</string>
    <string name="error_editor">Oh no… Something is not right here</string>
    <string name="save_image">Save To Gallery</string>
    <string name="filename">Now, let name your picture!</string>
    <string name="error_permission">Unfortunately, Picture cannot save the image without storage permission. You will try that again, won\'t you?</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="login_with_facebook">Continue with Facebook</string>
    <string name="i_will_sign_in_later"><u>Just use in offline mode. I will sign in later</u></string>
    <string name="error_sign_in_unknown">Oh sorry, we don\'t know exactly what is wrong. Can you help us ensure that your internet connection is okay?</string>
    <string name="set_wallpaper">Set your picture as Wallpaper</string>
    <string name="share">Share to</string>
    <string name="publish">Publish to Picture</string>
    <string name="title_completed">Nice! Would you like to do something?</string>
    <string name="delete">Delete from studio</string>
    <string name="change_profile_picture">Update your profile\'s picture</string>
    <string name="update_profile_name">Update your name</string>
    <string name="help">Help</string>
    <string name="welcome_1">Welcome</string>
    <string name="welcome_">Bring your style on photos and create your unique colors. </string>
    <string name="try_it_now">Go to <b>Studio</b></string>
    <string name="skip">Skip</string>
    <string name="do_nothing">Do nothing</string>
    <string name="about">About</string>
    <string name="save_template">Download this preset</string>
</resources>