<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:fontFamily="@font/lato_bold"
        android:textSize="15sp"
        android:text="@string/title_completed"/>

    <TextView
        android:id="@+id/viewSetWallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:drawablePadding="15dp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center_vertical"
        android:text="@string/set_wallpaper"
        android:textColor="#000"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_image" />

    <LinearLayout
        android:id="@+id/viewPublish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo"
            app:tint="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/lato_regular"
            android:gravity="center_vertical"
            android:text="@string/publish"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/viewShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:drawablePadding="15dp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center_vertical"
        android:text="@string/share"
        android:textColor="#000"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_upload" />

</LinearLayout>