<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:background="#fff"
        android:elevation="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:riv_corner_radius="100dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="16sp" />

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:paddingVertical="5dp"
        android:text="@string/change_profile_picture"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:paddingVertical="5dp"
        android:text="@string/update_profile_name"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:paddingVertical="5dp"
        android:text="@string/help"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:paddingVertical="5dp"
        android:text="@string/about"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:paddingVertical="5dp"
        android:textSize="15sp" />

</LinearLayout>