<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_x"
            android:textColor="#000"
            android:textStyle="bold"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:max="100"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/default_value_0"
            android:textColor="#000"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_y"
            android:textColor="#000"
            android:textStyle="bold"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:max="100"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/default_value_0"
            android:textColor="#000"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>