<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/photoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/viewDownloadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="15dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_gallery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_image"
                android:textColor="#000"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/lato_regular"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewDownloadPreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:paddingVertical="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_template"
                android:textColor="#000"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/lato_regular"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>