<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <com.nullexcom.uikit.UIFrameLayout
        android:id="@+id/UIFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorFacebook"
        android:radius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_facebook" />

        <com.nullexcom.uikit.UIButton
            android:id="@+id/btnSignInFacebook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorTransparent"
            android:text="@string/login_with_facebook"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

    </com.nullexcom.uikit.UIFrameLayout>

    <com.nullexcom.uikit.UIFrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorGoogle"
        android:radius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/UIFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_google" />

        <com.nullexcom.uikit.UIButton
            android:id="@+id/btnSignInGoogle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorTransparent"
            android:fontFamily="@font/lato_regular"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

    </com.nullexcom.uikit.UIFrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_will_sign_in_later"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />
</androidx.constraintlayout.widget.ConstraintLayout>