<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/wrapper_controls"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:visibility="gone"
            app:riv_corner_radius_top_left="12dp"
            app:riv_corner_radius_top_right="12dp"
            android:src="#fff"/>

        <include
            android:id="@+id/layoutAspectRatio"
            layout="@layout/page_crop"/>

        <include
            android:id="@+id/layoutRotateWheel"
            layout="@layout/page_rotate_wheel"
            android:visibility="gone"/>

        <include
            android:id="@+id/layoutScaleWheel"
            layout="@layout/page_scale_wheel"
            android:visibility="gone"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/wrapper_states"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@+id/wrapper_controls"
        android:background="#20242F"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/viewCrop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:gravity="center"
                app:srcCompat="@drawable/ic_state_crop" />

            <TextView
                android:id="@+id/tvCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#fff"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/crop" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewRotate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:gravity="center"
                app:srcCompat="@drawable/ic_state_rotate" />

            <TextView
                android:id="@+id/tvRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#fff"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/rotate" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewScale"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:gravity="center"
                app:srcCompat="@drawable/ic_state_scale" />

            <TextView
                android:id="@+id/tvScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#fff"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/scale" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>